# godot-vst3-host

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  SConstruct  default_bus_layout.tres  default_vst3_layout.tres  icon.svg.import  lv2host_run_scene.gd  lv2host_run_scene.gd.uid  main.gd  main.gd.uid  main.tscn  project.godot  vcpkg.json  vst3_control_dropdown.gd  vst3_control_dropdown.gd.uid  vst3_control_dropdown.tscn  vst3_control_slider.gd  vst3_control_slider.gd.uid  vst3_control_slider.tscn  vst3_editor.gd  vst3_editor.gd.uid  vst3_editor.tscn  vst3host_run_scene.gd  vst3host_run_scene.gd.uid
.github/workflows/: build_images.yml  builds.yml
addons/vst3-host/: editor_vst3_host.tscn  editor_vst3_host_drop.gd  editor_vst3_host_drop.gd.uid  editor_vst3_host_instance.gd  editor_vst3_host_instance.gd.uid  editor_vst3_host_instance.tscn  editor_vst3_host_instances.gd  editor_vst3_host_instances.gd.uid  editor_vst3_host_instances.tscn  editor_vst3_host_main.tscn  plugin.cfg  vst3_host_import.gd  vst3_host_import.gd.uid
addons/vst3-host/icons/: Lv2Godot.svg.import  Vst3Godot.svg.import
packaging/: zip-ignore.txt  zip-include.txt
platform/mingw/: build_debug.sh  build_release.sh
platform/osxcross/: build_deps_debug.sh  build_deps_release.sh  build_lib_debug.sh  build_lib_release.sh  custom-osx.cmake  osx-arm64.ini  osx-x64.ini
platform/ubuntu/: Dockerfile  build_debug.sh  build_release.sh
platform/vcpkg/ports/mp3lame/: portfile.cmake
platform/vcpkg/ports/vst3sdk/: portfile.cmake  vcpkg.json  vst3_public_sdk_patch.diff  vst3sdk_patch.diff
platform/vcpkg/triplets/: arm64-osxcross.cmake  x64-osxcross.cmake
scripts/: create_zip.sh
src/: audio_effect_get_vst3_channel.cpp  audio_effect_get_vst3_channel.h  audio_effect_set_vst3_channel.cpp  audio_effect_set_vst3_channel.h  audio_stream_player_vst3.cpp  audio_stream_player_vst3.h  audio_stream_player_vst3_channel.cpp  audio_stream_player_vst3_channel.h  audio_stream_vst3.cpp  audio_stream_vst3.h  audio_stream_vst3_channel.cpp  audio_stream_vst3_channel.h  editor_audio_meter_notches_vst3.cpp  editor_audio_meter_notches_vst3.h  register_types.cpp  register_types.h  vst3_circular_buffer.cpp  vst3_circular_buffer.h  vst3_host.cpp  vst3_host.h  vst3_instance.cpp  vst3_instance.h  vst3_layout.cpp  vst3_layout.h  vst3_parameter.cpp  vst3_parameter.h  vst3_server.cpp  vst3_server.h  vst3_server_node.cpp  vst3_server_node.h
src/host/: main.cpp
templates/: godotvst3host.gdextension.in  version_generated.gen.h.in
